--- a/index.html
+++ b/index.html
@@ -93,5 +93,9 @@
     <div class="enroll-box"></div>
   </div>
   <!-- Enroll Box Ends  -->
+  <script>
+    var name=prompt("What is Your Name");
+    alert("Hello, "+name)
+  </script>
 </body>
 </html>
