modified:   index.html 	modified:   static/css/style.css 	deleted:    static/image/Middlesex.jpg 	deleted:    static/image/UCLan-logo.jpg 	deleted:    static/image/ncc.jfif 	deleted:    static/image/ofqual.jpg 	deleted:    static/image/uclan.webp

--- a/index.html
+++ b/index.html
@@ -62,23 +62,25 @@
   <div class="space"></div>
   <!-- Why Choose Us Begins -->
   <div id="why">
-    <h1 class="hdings">Why Choose Us</h1>
+    <h1>Why Choose Us</h1>
     <p style="text-align: center;">Here are a few reasons why you should choose Aptech</p>
     <section class="df section2" style="justify-content: space-around; margin:40px auto;">
         <div class="why-box">
             <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-            <h2 class="hdings">Aptech's Certificate Enjoy Global Recognition</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, aperiam hic nam saepe quae necessitatibus pariatur vitae architecto obcaecati odio aliquam esse et a accusamus, deserunt non ad, animi id. Rerum odit suscipit porro quos repellat, perferendis voluptate doloribus maiores placeat, incidunt quidem. Dignissimos iste aut animi corporis? Pariatur ipsum itaque tenetur nemo soluta! Voluptate aliquam itaque praesentium reiciendis illo inventore dolore quidem temporibus. Quibusdam enim impedit illum aspernatur officia officiis repellendus reiciendis velit saepe, eaque veritatis facere quis voluptate.</p>
+            <h2>Aptech's Certificate Enjoy Global Recognition</h2>
+            <p>Aptech’s courses lead to professional I.T. certifications from leading I.Tbrands such as Microsoft and from Aptech itself.Each course includes classroom learning as well as practical sessions in the lab. Students are given optimum time in the lab and can work on their projects/assignments whenever they wish</p>
         </div>
         <div class="why-box">
             <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-            <h2 class="hdings">Aptech's Certificate Enjoy Global Recognition</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, aperiam hic nam saepe quae necessitatibus pariatur vitae architecto obcaecati odio aliquam esse et a accusamus, deserunt non ad, animi id. Rerum odit suscipit porro quos repellat, perferendis voluptate doloribus maiores placeat, incidunt quidem. Dignissimos iste aut animi corporis? Pariatur ipsum itaque tenetur nemo soluta! Voluptate aliquam itaque praesentium reiciendis illo inventore dolore quidem temporibus. Quibusdam enim impedit illum aspernatur officia officiis repellendus reiciendis velit saepe, eaque veritatis facere quis voluptate.</p>
+            <h2>Aptech's Certificate Enjoy Global Recognition</h2>
+            <p>Aptech has alliance with the best international Universities and institutes across the globe to benefit Aptech students. It helps students pursue an international ICT degree staying in Nigeria or at our partner universities in UK, Australia, Dubai, Malta, Ireland or Malaysia. Get set and register with Aptech, Enquire now!
+
+            </p>
         </div>
         <div class="why-box">
             <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-            <h2 class="hdings">Aptech's Certificate Enjoy Global Recognition</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, aperiam hic nam saepe quae necessitatibus pariatur vitae architecto obcaecati odio aliquam esse et a accusamus, deserunt non ad, animi id. Rerum odit suscipit porro quos repellat, perferendis voluptate doloribus maiores placeat, incidunt quidem. Dignissimos iste aut animi corporis? Pariatur ipsum itaque tenetur nemo soluta! Voluptate aliquam itaque praesentium reiciendis illo inventore dolore quidem temporibus. Quibusdam enim impedit illum aspernatur officia officiis repellendus reiciendis velit saepe, eaque veritatis facere quis voluptate.</p>
+            <h2>Aptech's Certificate Enjoy Global Recognition</h2>
+            <p>I.T. is an empowering tool, which when appropriately utilized, leads to an increase in productivity improvements and prosperity at the individual, organizational, societal, national and global levels. Education is also an enabler, which leads to continued improvement in productivity and prosperity</p>
         </div>
     </section>
     <div class="btn-box">
@@ -88,14 +90,17 @@
   <!-- Why Choose Us Ends -->
   <div class="space"></div>
   <!-- Enroll Box starts -->
-  <div id="enroll" class="df">
-    <div class="enroll-box"></div>
-    <div class="enroll-box"></div>
+  <div id="enroll">
+    <div class="enroll-box text">
+        <h2>Why should I enroll?</h2>
+        <p>A career in programming is actually possible whether you are old or young, male or female and one of the very best reasons to become a computer programmer is the bounty of jobs out there. And because we are an increasingly technologically reliant society it is also apparent that there will be jobs in the programming sector for a long time to come. As other industries decline and cease to be, programming is growing and expanding into almost all areas of life.</p>
+        <br>
+        <br>
+        <a href="#">Enroll Now  &nbsp; <i class="fa fa-arrow-right" aria-hidden="true"></i>
+        </a>
+    </div>
+    <div class="enroll-box pic"></div>
   </div>
   <!-- Enroll Box Ends  -->
-  <script>
-    var name=prompt("What is Your Name");
-    alert("Hello, "+name)
-  </script>
 </body>
 </html>
