modified:   index.html 	modified:   static/css/style.css 	new file:   static/image/course1 (1).jpg 	new file:   static/image/course1 (2).jpg 	new file:   static/image/course1(3).jpg

--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
     </div>
     </div>
   <!-- Why Choose Us Ends -->
+
+
   <div class="space"></div>
+
   <!-- Enroll Box starts -->
   <div id="enroll">
     <div class="enroll-box text">
@@ -102,5 +105,27 @@
     <div class="enroll-box pic"></div>
   </div>
   <!-- Enroll Box Ends  -->
+
+  <div class="space"></div>
+  <!-- Courses start -->
+  <div id="courses">
+    <h2>Most Chosen Courses</h2>
+    <p>A few of our most popular courses</p>
+    <div class="course-container">
+        <div class="course-box img1">
+            <div class="overlay"> <h3>Aptech ACNS Career Courses</h3></div>
+        </div>
+        <div class="course-box img2">
+            <div class="overlay"><h3>Advanced Diploma In Software Engineering (ADSE)</h3>
+            </div>
+        </div>
+        <div class="course-box img3">
+            <div class="overlay">
+                <h3>Aptech Smart Professional Courses</h3>
+            </div>
+        </div>
+    </div>
+  </div>
+  <!-- Courses ends -->
 </body>
 </html>
