modified:   index.html 	modified:   static/css/style.css

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
   <!-- Enroll Box Ends  -->
 
   <div class="space"></div>
+
   <!-- Courses start -->
   <div id="courses">
     <h2>Most Chosen Courses</h2>
@@ -125,7 +126,46 @@
             </div>
         </div>
     </div>
+    <br>
+<br>
+<div class="btn-box">
+    <a href="#">View Courses <i class="fa fa-arrow-right" aria-hidden="true"></i> </a>
+</div>
   </div>
   <!-- Courses ends -->
+
+  <div class="space"></div>
+
+  <!-- About us begins -->
+  <div id="about">
+    <h2>Testimonials</h2>
+    <p>What our students say about us</p>
+    <br>
+    <div id="about-container">
+        <div class="about-box">
+            <div class="info">
+                <div class="pic pic1"></div>
+                <div class="name"></div>
+            </div>
+            <div class="testimonial"></div>
+        </div>
+        <div class="about-box">
+            <div class="info">
+                <div class="pic pic2"></div>
+                <div class="name"></div>
+            </div>
+            <div class="testimonial"></div>
+        </div>
+        <div class="about-box">
+            <div class="info">
+                <div class="pic pic3"></div>
+                <div class="name"></div>
+            </div>
+            <div class="testimonial"></div>
+        </div>
+    </div>
+  </div>
+  <!-- About us Ends -->
+
 </body>
 </html>
